2017.9/_sources/plugins/available/gneiss/assign-ids.txt
assign-ids: Assigns ids on internal nodes in the tree.
======================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime gneiss assign-ids [OPTIONS]

     Assigns UUIDs to uniquely identify internal nodes in the tree.  Also
     corrects for polytomies to create strictly bifurcating trees.

   Options:
     --i-input-tree PATH     Artifact: Phylogeny[Rooted]  [required]
                             The input
                             tree with potential missing ids.
     --o-output-tree PATH    Artifact: Hierarchy [required if not passing
                             --output-dir]
                             A tree with uniquely identifying ids.
     --output-dir DIRECTORY  Output unspecified results to a directory
     --cmd-config PATH       Use config file for command options
     --verbose               Display verbose output to stdout and/or stderr
                             during execution of this action.  [default: False]
     --quiet                 Silence output if execution is successful (silence
                             is golden).  [default: False]
     --help                  Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Assigns ids on internal nodes in the tree.

   Assigns UUIDs to uniquely identify internal nodes in the tree.  Also
   corrects for polytomies to create strictly bifurcating trees.

   Parameters
   ----------
   input_tree : Phylogeny[Rooted]
       The input tree with potential missing ids.

   Returns
   -------
   output_tree : Hierarchy
       A tree with uniquely identifying ids.</pre>
       </div>
     </div>
   </div>